# technopark_hw-c_cpp

./: .gitignore  README.md
.github/workflows/: ci_hw-1.yml  ci_hw-2.yml
hw-1/: CMakeLists.txt  README.md  main.c
hw-1/schedule/: CMakeLists.txt  schedule.c  schedule.h  schedule_private.h
hw-1/tests/: CMakeLists.txt  test.cc
hw-2/: CMakeLists.txt  README.md  main.c  tmp.txt
hw-2/kmeans_lib/: kmeans.c  kmeans.h  kmeans_multiplex.c  kmeans_multiplex.h  kmeans_serial.c
hw-2/kmeans_libs/: CMakeLists.txt
hw-2/kmeans_libs/inc/: kmeans.h  kmeans_multiprocess.h
hw-2/kmeans_libs/src/: kmeans.c  kmeans_multiplex.c  kmeans_multiprocess.c  kmeans_serial.c
hw-2/tests/: CMakeLists.txt  kmeans_tests.cc  multiprocess_tests.cc  serial_tests.cc  tests.cc
hw-2/tests/data/: CMakeLists.txt  generate_data.c
